# proto_stack

./: .env  .gitignore  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/routers/: README.md  chat.py
database/: Dockerfile.liquibase  init.sql
database/liquibase/: liquibase.properties
database/liquibase/changelogs/: db.changelog-master.yaml
database/liquibase/changelogs/v1.0.0/: 001-create-todos-table.yaml
frontend/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
frontend/pages/: __init__.py  about.py  chat.py  home.py  todos.py
scripts/: migrate.sh
