[project]
name = "proto-stack-backend"
version = "1.0.0"
description = "FastAPI backend for Proto Stack Todo application"
readme = "README.md"
authors = [
    {name = "Proto Stack Team"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "python-dotenv==1.0.0",
    "debugpy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []