[project]
name = "proto-stack-frontend"
version = "1.0.0"
description = "Streamlit frontend for Proto Stack Todo application"
readme = "README.md"
authors = [
    {name = "Proto Stack Team"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.28.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "debugpy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []